# Lokesh-Venkatesh-21_codescribe

./: .env.example  Dockerfile  README.md  action-container.yml  action.yml  pyproject.toml
app/: cli.py
app/api/routes/: pull_requests.py  webhooks.py
app/core/: agent_config.py  config.py
app/schemas/: pull_requests.py
app/services/: branch_documentation.py  github.py  llm_providers.py  pr_intelligence.py  review_publishing.py
scripts/: action-entrypoint.sh  smoke_process_pr.py
tests/integration/: test_github_webhook.py  test_process_pull_request.py
tests/unit/: test_branch_documentation.py  test_cli.py  test_github_actions_workflow.py  test_github_client.py  test_llm_providers.py
