[project]
name = "codescribe"
version = "0.1.0"
description = "Production-grade AI documentation and PR summary platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "google-generativeai>=0.7.2",
  "greenlet>=3.0.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "PyJWT[crypto]>=2.8.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "python-dotenv>=1.0.1",
  "python-json-logger>=2.0.7",
  "PyYAML>=6.0.2",
  "redis>=5.0.7",
  "SQLAlchemy>=2.0.31",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.1"
]

[project.scripts]
codescribe = "app.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]
local-llm = [
  "torch>=2.3.0",
  "transformers>=4.42.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
